United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6996136 VM crash in src/share/vm/runtime/virtualspace.cpp:424
6996136 : VM crash in src/share/vm/runtime/virtualspace.cpp:424

Details
Type:
Bug
Submit Date:
2010-10-29
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2010-11-12
Component:
hotspot
OS:
generic,windows_7,windows
Sub-Component:
runtime
CPU:
x86,generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs20,7
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Duplicate:
Duplicate:
Duplicate:
Duplicate:

Sub Tasks

Description
VM crashed with:

# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P1/B/162337.kk1971/source/src/share/vm/runtime/virtualspace.cpp:424), pid=24833, tid=2
#  assert((_noaccess_prefix != 0) == (UseCompressedOops && _base != NULL && (size_t(_base + _size) > OopEncodingHeapMax) && Universe::narrow_oop_use_implicit_null_checks())) failed: noaccess_prefix should be used only with non zero based compressed oops
...
#
Current thread is 2
Dumping core ...

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/9de67bf4244d
                                     
2010-12-04
EVALUATION

see comments
                                     
2010-11-12



Hardware and Software, Engineered to Work Together