6996136: VM crash in src/share/vm/runtime/virtualspace.cpp:424

Turn CDS off if compressed oops is on

Reviewed-by: ysr, kvn, jcoomes, phh